// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should match snapshot 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-1"
    id="customized-dialog-title"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6"
    >
      Modal
    </h6>
    <button
      aria-label="close"
      class="MuiButtonBase-root MuiIconButton-root Component-closeButton-2"
      data-testid="button-icon-close"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-3"
  >
    Hello this is modal
  </div>
  <div
    class="MuiDialogActions-root WithStyles(ForwardRef(DialogActions))-root-4 MuiDialogActions-spacing"
  >
    <div
      class="MuiBox-root MuiBox-root-6 makeStyles-buttonGroup-5"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-focusVisible Mui-focusVisible"
        data-testid="button-Apply"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Apply
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should match snapshot without actions 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-7"
    id="customized-dialog-title"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6"
    >
      Modal
    </h6>
    <button
      aria-label="close"
      class="MuiButtonBase-root MuiIconButton-root Component-closeButton-8"
      data-testid="button-icon-close"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-9"
  >
    Hello this is modal
  </div>
</div>
`;
